--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Liudmyla Kirnos</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -40,7 +43,7 @@
                 <h2 class="header_list_general main_title main_text">Photographer & Filmmaker</h2>
                 
                 <h1>Aperture Studios</h1>
-                <p class="header_list_general main_text">
+                <p class="header_list_general main_text main_text_padding">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta iusto magni dignissimos optio dolorem itaque, veniam deserunt maxime fugit cumque, asperiores pariatur, assumenda inventore. Veritatis excepturi blanditiis quos dolorem distinctio.
                 </p>
             </div>
