added logos location

--- a/index.html
+++ b/index.html
@@ -47,7 +47,12 @@
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta iusto magni dignissimos optio dolorem itaque, veniam deserunt maxime fugit cumque, asperiores pariatur, assumenda inventore. Veritatis excepturi blanditiis quos dolorem distinctio.
                 </p>
             </div>
-
+            <ul class="fixed_location">
+                <li>1/2000s</li>
+                <li>f/11</li>
+                <li>100</li>
+                <li>Iceland</li>
+            </ul>
         </section>
     </main>
 
