added four sections

--- a/index.html
+++ b/index.html
@@ -54,6 +54,76 @@
                 <li>Iceland</li>
             </ul>
         </section>
+
+        <section class="sunset">
+            <div class="sunset_container">
+                <h4>Sunset at Mount Fuji</h4>
+                <p>Duis tristique sed lorem a vestibulum. Cras commodo consequat orci, in convallis risus egestas non.</p>
+            </div>
+
+            <ul class="fixed_location">
+                <li>1''</li>
+                <li>f/16</li>
+                <li>400</li>
+                <li>Japan</li>
+        </section>
+
+        <section class="leaves">
+            <div class="leaves_container">
+                <h4>Monstera Leafs</h4>
+                <p>Vestibulum sit amet urna turpis. Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt.</p>
+            </div>
+
+            <ul class="fixed_location">
+                <li>1/400s</li>
+                <li>f/3,5</li>
+                <li>100</li>
+                <li>Costa Rica</li>
+        </section>
+
+        <section class="past_clients">
+            <div class="past_clients_container">
+                <h2>Past clients</h2>
+                <p>Trusted by your favourite companies</p>
+                <div class="clients_icons">
+                    <a href="#">
+                        <img src="images/iconhill.svg" alt="">
+                    </a>
+                    <a href="#">
+                        <img src="images/iconriks.svg" alt="">
+                    </a>
+                    <a href="#">
+                        <img src="images/iconstudio.svg" alt="">
+                    </a>
+                    <a href="#">
+                        <img src="images/iconchill.svg" alt="">
+                    </a>
+                    <a href="#">
+                        <img src="images/iconstockholm.svg" alt="">
+                    </a>
+                </div>
+            </div>
+        </section>
+
+        <section class="stars">
+            <div class="stars_container">
+                <h4>Star fall in the Himalayas</h4>
+                <p>Nulla rhoncus feugiat eros quis consectetur. Morbi neque ex, condimentum dapibus congue et, vulputate ut ligula.</p>
+            </div>
+
+            <ul class="fixed_location">
+                <li>6''</li>
+                <li>f/11</li>
+                <li>800</li>
+                <li>Nepal</li>
+        </section>
+
+        <section class="help">
+            <div class="help_style">
+                <h2>Need help with photography or videography?</h2>
+                <p>We're here for you!</p>
+            </div>
+        </section>
     </main>
 
 
