added four sections

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Liudmyla Kirnos</title>
+    <title>Aperture Liudmyla Kirnos</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
 </head>
 <body>
     <header>
@@ -17,7 +18,7 @@
                 <img src="images/logo.svg" alt logo>
             </a>
             <nav>
-                <ul id="navbar">
+                <ul class="navbar">
                     <li class="header_list_large">
                         <a href="#" class="header_list_general header_list_short_size">Business areas</a>
                     </li>
@@ -122,6 +123,7 @@
             <div class="help_style">
                 <h2>Need help with photography or videography?</h2>
                 <p>We're here for you!</p>
+                <a href="#" class="help_touch">Get in touch</a>
             </div>
         </section>
     </main>
