--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Aperture Liudmyla Kirnos</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/owl.carousel.css">
+    <link rel="stylesheet" href="css/owl.theme.default.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
 </head>
@@ -86,7 +88,7 @@
             <div class="past_clients_container">
                 <h2>Past clients</h2>
                 <p>Trusted by your favourite companies</p>
-                <div class="clients_icons">
+                <div class="clients_icons owl-carousel">
                     <a href="#">
                         <img src="images/iconhill.svg" alt="">
                     </a>
@@ -130,6 +132,11 @@
 
 
 
-    
+<script
+src="https://code.jquery.com/jquery-3.6.1.js"
+integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="
+crossorigin="anonymous"></script>
+<script src="js/owl.carousel.js"></script>
+<script src="js/scripts.js"></script>
 </body>
 </html>
