--- a/index.html
+++ b/index.html
@@ -21,20 +21,20 @@
             </a>
             <nav>
                 <ul class="navbar">
-                    <li class="header_list_large">
-                        <a href="#" class="header_list_general header_list_short_size">Business areas</a>
+                    <li class="header_large">
+                        <a href="#" class="header_general">Business areas</a>
                     </li>
-                    <li class="header_list_large">
-                        <a href="#" class="header_list_general header_list_large_size">Featured images</a>
+                    <li class="header_large">
+                        <a href="#" class="header_general">Featured images</a>
                     </li>
-                    <li class="header_list_short">
-                        <a href="#" class="header_list_general header_list_large_size">Gear cage</a>
+                    <li class="header_short">
+                        <a href="#" class="header_general">Gear cage</a>
                     </li>
-                    <li class="header_list_short">
-                        <a href="#" class="header_list_general header_list_large_size">Contact</a>
+                    <li class="header_short">
+                        <a href="#" class="header_general">Contact</a>
                     </li>
-                    <li class="header_button_template">
-                        <a href="#" class="header_list_general header_button_template_style">Get template</a>
+                    <li class="header_short">
+                        <a href="#" class="header_template">Get template</a>
                     </li>
                 </ul>
             </nav>
@@ -43,10 +43,10 @@
     <main>
         <section class="main_image">
             <div class="main_style">
-                <h2 class="header_list_general main_title main_text">Photographer & Filmmaker</h2>
+                <h2 class="header_general main_title main_text">Photographer & Filmmaker</h2>
                 
                 <h1>Aperture Studios</h1>
-                <p class="header_list_general main_text main_text_padding">
+                <p class="header_general main_text main_text_padding">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta iusto magni dignissimos optio dolorem itaque, veniam deserunt maxime fugit cumque, asperiores pariatur, assumenda inventore. Veritatis excepturi blanditiis quos dolorem distinctio.
                 </p>
             </div>
