--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <li class="header_large">
                         <a href="#" class="header_general">Business areas</a>
                     </li>
-                    <li class="header_large">
+                    <li class="header_short">
                         <a href="#" class="header_general">Featured images</a>
                     </li>
                     <li class="header_short">
