--- a/index.html
+++ b/index.html
@@ -62,6 +62,49 @@
             </ul>
         </section>
 
+        <section class="what_we_do">
+            <div class="container">
+                <h3>What we do.</h3>
+                <h4>The areas that we're specialized in.</h4>
+                <div class="d_flex flex_wrap">
+                    <article>
+                        <div class="description">
+                            <h4>Product Photography</h4>
+                            <p>Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.</p>
+                                <a href="#" class="read_more">Read more</a>
+                        </div>
+                        <img src="images/what_mouse.jpg" alt="">
+                    </article>
+                    <article>
+                        <div class="description">
+                            <h4>Architecture Photography</h4>
+                            <p>Aenean porta neque eget consequat fringilla. Vestibulum ultrices, orci nec egestas pharetra, ligula est semper enim, nec auctor sapien leo nec purus. Fusce tincidunt aliquet sapien, sit amet rhoncus leo imperdiet nec.</p>
+                                <a href="#" class="read_more">Read more</a>
+                        </div>
+                        <img src="images/what_triangle.jpg" alt="">
+                    </article>
+                </div>
+                <div class="d_flex flex_wrap">
+                    <article>
+                        <div class="description">
+                            <h4>Drone Photography</h4>
+                            <p>Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt. Duis tristique sed lorem a vestibulum. Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.</p>
+                                <a href="#" class="read_more">Read more</a>
+                        </div>
+                        <img src="images/what_tree.jpg" alt="">
+                    </article>
+                    <article>
+                        <div class="description">
+                            <h4>Wildlife Photography</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque aliquam odio et faucibus. Nulla rhoncus feugiat eros quis consectetur. Morbi neque ex, condimentum dapibus congue et, vulputate ut ligula. Vestibulum sit amet urna turpis.</p>
+                                <a href="#" class="read_more">Read more</a>
+                        </div>
+                        <img src="images/what_deer.jpg" alt="">
+                    </article>
+                </div>
+            </div>
+        </section>
+
         <section class="sunset">
             <div class="sunset_container">
                 <h4>Sunset at Mount Fuji</h4>
@@ -73,6 +116,24 @@
                 <li>f/16</li>
                 <li>400</li>
                 <li>Japan</li>
+        </section>
+
+        <section class="tools">
+            <div class="container">
+                <div class="tools_item">
+                    <h3>The Gear cage</h3>
+                    <h2>The tools that we use.</h2>
+                    <p>The say that "no place is boring if you've had a good night's sleep and have a pocket full of unexposed film". While we don't shoot (a lot) of film these days — these are the tools that we actually use everyday to capture the amazing things around us.</p>
+                    <a href="" class="check_it_out">Check it out</a>
+                </div>
+            </div>
+            <div class="position_bg">
+                <ul class="fixed_location">
+                    <li>0,8''</li>
+                    <li>f/5,6</li>
+                    <li>100</li>
+                    <li>Sweden</li>
+            </div>
         </section>
 
         <section class="leaves">
