header burger added

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+        integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
     <link rel="stylesheet" href="css/owl.carousel.css">
     <link rel="stylesheet" href="css/owl.theme.default.css">
@@ -17,9 +19,39 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
 </head>
+
 <body>
-    <header>
-        <div class="header_main">
+    <header class="cd-header">
+        <div class="container d_flex">
+            <a href="#0" class="header_logo"><img src="images/logo.svg" alt logo></a>
+            <a href="#0" class="cd-3d-nav-trigger">
+                Menu
+                <span></span>
+            </a>
+            <nav class="cd-3d-nav-container">
+                <ul class="cd-3d-nav navbar">
+                    <li class="header_large">
+                        <a href="#" class="header_general">Business areas</a>
+                    </li>
+                    <li class="header_short">
+                        <a href="#" class="header_general">Featured images</a>
+                    </li>
+                    <li class="header_short">
+                        <a href="#" class="header_general">Gear cage</a>
+                    </li>
+                    <li class="header_short">
+                        <a href="#" class="header_general">Contact</a>
+                    </li>
+                    <li class="header_short">
+                        <a href="#" class="header_template">Get template</a>
+                    </li>
+                </ul>
+                <span class="cd-marker color-1"></span>
+            </nav>
+        </div>
+    </header>
+    <!-- <header>
+        <div class="container d_flex"> 
             <a href="#" class="header_logo">
                 <img src="images/logo.svg" alt logo>
             </a>
@@ -43,15 +75,17 @@
                 </ul>
             </nav>
         </div>
-    </header>
+    </header> -->
     <main>
         <section class="main_image">
             <div class="main_style">
                 <h2 class="header_general main_title main_text">Photographer & Filmmaker</h2>
-                
+
                 <h1>Aperture Studios</h1>
                 <p class="header_general main_text main_text_padding">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta iusto magni dignissimos optio dolorem itaque, veniam deserunt maxime fugit cumque, asperiores pariatur, assumenda inventore. Veritatis excepturi blanditiis quos dolorem distinctio.
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta iusto magni dignissimos optio
+                    dolorem itaque, veniam deserunt maxime fugit cumque, asperiores pariatur, assumenda inventore.
+                    Veritatis excepturi blanditiis quos dolorem distinctio.
                 </p>
             </div>
             <ul class="fixed_location">
@@ -70,16 +104,19 @@
                     <article>
                         <div class="description">
                             <h4>Product Photography</h4>
-                            <p>Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.</p>
-                                <a href="#" class="read_more">Read more</a>
+                            <p>Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor
+                                hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.</p>
+                            <a href="#" class="read_more">Read more</a>
                         </div>
                         <img src="images/what_mouse.jpg" alt="">
                     </article>
                     <article>
                         <div class="description">
                             <h4>Architecture Photography</h4>
-                            <p>Aenean porta neque eget consequat fringilla. Vestibulum ultrices, orci nec egestas pharetra, ligula est semper enim, nec auctor sapien leo nec purus. Fusce tincidunt aliquet sapien, sit amet rhoncus leo imperdiet nec.</p>
-                                <a href="#" class="read_more">Read more</a>
+                            <p>Aenean porta neque eget consequat fringilla. Vestibulum ultrices, orci nec egestas
+                                pharetra, ligula est semper enim, nec auctor sapien leo nec purus. Fusce tincidunt
+                                aliquet sapien, sit amet rhoncus leo imperdiet nec.</p>
+                            <a href="#" class="read_more">Read more</a>
                         </div>
                         <img src="images/what_triangle.jpg" alt="">
                     </article>
@@ -88,16 +125,20 @@
                     <article>
                         <div class="description">
                             <h4>Drone Photography</h4>
-                            <p>Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt. Duis tristique sed lorem a vestibulum. Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.</p>
-                                <a href="#" class="read_more">Read more</a>
+                            <p>Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt. Duis tristique sed
+                                lorem a vestibulum. Cras commodo consequat orci, in convallis risus egestas non. Nulla
+                                efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.</p>
+                            <a href="#" class="read_more">Read more</a>
                         </div>
                         <img src="images/what_tree.jpg" alt="">
                     </article>
                     <article>
                         <div class="description">
                             <h4>Wildlife Photography</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque aliquam odio et faucibus. Nulla rhoncus feugiat eros quis consectetur. Morbi neque ex, condimentum dapibus congue et, vulputate ut ligula. Vestibulum sit amet urna turpis.</p>
-                                <a href="#" class="read_more">Read more</a>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque aliquam odio
+                                et faucibus. Nulla rhoncus feugiat eros quis consectetur. Morbi neque ex, condimentum
+                                dapibus congue et, vulputate ut ligula. Vestibulum sit amet urna turpis.</p>
+                            <a href="#" class="read_more">Read more</a>
                         </div>
                         <img src="images/what_deer.jpg" alt="">
                     </article>
@@ -108,7 +149,8 @@
         <section class="sunset">
             <div class="sunset_container">
                 <h4>Sunset at Mount Fuji</h4>
-                <p>Duis tristique sed lorem a vestibulum. Cras commodo consequat orci, in convallis risus egestas non.</p>
+                <p>Duis tristique sed lorem a vestibulum. Cras commodo consequat orci, in convallis risus egestas non.
+                </p>
             </div>
 
             <ul class="fixed_location">
@@ -123,7 +165,9 @@
                 <div class="tools_item">
                     <h3>The Gear cage</h3>
                     <h2>The tools that we use.</h2>
-                    <p>The say that "no place is boring if you've had a good night's sleep and have a pocket full of unexposed film". While we don't shoot (a lot) of film these days — these are the tools that we actually use everyday to capture the amazing things around us.</p>
+                    <p>The say that "no place is boring if you've had a good night's sleep and have a pocket full of
+                        unexposed film". While we don't shoot (a lot) of film these days — these are the tools that we
+                        actually use everyday to capture the amazing things around us.</p>
                     <a href="" class="check_it_out">Check it out</a>
                 </div>
             </div>
@@ -139,7 +183,8 @@
         <section class="leaves">
             <div class="leaves_container">
                 <h4>Monstera Leafs</h4>
-                <p>Vestibulum sit amet urna turpis. Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt.</p>
+                <p>Vestibulum sit amet urna turpis. Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt.
+                </p>
             </div>
 
             <ul class="fixed_location">
@@ -176,7 +221,8 @@
         <section class="stars">
             <div class="stars_container">
                 <h4>Star fall in the Himalayas</h4>
-                <p>Nulla rhoncus feugiat eros quis consectetur. Morbi neque ex, condimentum dapibus congue et, vulputate ut ligula.</p>
+                <p>Nulla rhoncus feugiat eros quis consectetur. Morbi neque ex, condimentum dapibus congue et, vulputate
+                    ut ligula.</p>
             </div>
 
             <ul class="fixed_location">
@@ -255,14 +301,14 @@
 
 
 
-<script src="https://kit.fontawesome.com/c090ec296e.js" crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.6.1.js"
-integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="
-crossorigin="anonymous"></script>
-<script src="js/owl.carousel.js"></script>
-<script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
-<script src="js/scripts.js"></script>
+    <script src="https://kit.fontawesome.com/c090ec296e.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.1.js"
+        integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
+    <script src="js/owl.carousel.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
+    <script src="js/scripts.js"></script>
 
 
 </body>
+
 </html>
